--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,8 @@ code.block { display: block; background: #eee; border-radius: 4px; padding: 0.2e
 #test_results .result_trusted { color: #060; font-weight: bold; }
 #test_results .result_untrusted { color: #900; font-weight: bold; }
 #test_results .result_error { color: #F40; }
+
+#footer p { margin: 0.5em; }
+#footer { margin-top: 2em; text-align: center; color: #777; font-size: 90%; }
+#footer a { color: inherit; margin-left: 0.3em; }
+#footer a:hover { color: #222; }
