--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+/*
+ * Copyright (C) 2014 Opsmate, Inc.
+ *
+ * See COPYING file for license information.
+*/
 html, body { color: black; background: white; font-family: sans-serif; }
 a:link { color: #00A; }
 a:visited { color: #639; }
